--- a/css/smartisan.css
+++ b/css/smartisan.css
@@ -110,13 +110,16 @@ header .header-aside a {
   background-size: 180%;
 }
 
+#nav {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
 nav {
   height: 75px;
   background: #fff;
   font-size: 14px;
-  position: sticky;
-  top: 0;
-  z-index: 10;
   background: #fff;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.05);
 }
