--- a/sass/smartisan.scss
+++ b/sass/smartisan.scss
@@ -118,13 +118,17 @@ header {
     }
 }
 
+#nav {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+
+}
+
 nav {
     height: 75px;
     background: #fff;
     font-size: 14px;
-    position: sticky;
-    top: 0;
-    z-index: 10;
     background: #fff;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .05);
 
