--- a/sass/goodsDetails.scss
+++ b/sass/goodsDetails.scss
@@ -37,7 +37,8 @@
 
                             img {
                                 display: block;
-                                width: 100%;
+                                width: 54px;
+                                height: 54px;
                                 height: auto;
                             }
                         }
@@ -46,9 +47,10 @@
             }
 
             .picShow {
+                position: relative;
+
                 .picShow-container {
                     margin-left: 10px;
-                    position: relative;
 
                     img {
                         display: block;
@@ -56,11 +58,194 @@
                         height: 440px;
                     }
                 }
+
+                &:hover{
+                    .picBig{
+                        display: block;
+                    }
+                }
+                .picBig {
+                    display: none;
+                    width: 440px;
+                    height: 440px;
+                    border: 1px solid #ccc;
+                    position: absolute;
+                    left: 500px;
+                    top: 0;
+                    overflow: hidden;
+                    img{
+                        width: 700px;
+                        height: 700px;
+                        display: block;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                    }
+                }
             }
         }
 
         .detailsBox {
-            
+            flex: 1;
+
+            .underline {
+                border-bottom: 1px solid rgba(0, 0, 0, .08);
+            }
+
+            .list {
+
+                margin-top: 30px;
+                padding: 20px 10px;
+                display: flex;
+
+                aside {
+                    width: 85px;
+                    height: 28px;
+                    line-height: 28px;
+                    color: #666;
+                    font-weight: 700;
+                    font-size: 14px;
+                }
+
+                article {
+                    flex: 1;
+                }
+
+            }
+
+            .name {
+                font-size: 24px;
+                line-height: 30px;
+                color: #000;
+                font-weight: 700;
+                padding: 0 0 20px;
+            }
+
+            .discription {
+                color: #999;
+                font-size: 14px;
+                line-height: 28px;
+
+                &:hover {
+                    text-decoration: underline;
+                    color: #f50;
+                    cursor: pointer;
+                }
+
+            }
+
+            .price-container {
+                font-size: 20px;
+                color: #d44d44;
+                font-weight: 800;
+                line-height: 28px;
+
+                &::before {
+                    padding-right: 2px;
+                    content: "\A5";
+                    color: #d44d44;
+                }
+            }
+
+            .select {
+                display: flex;
+
+                .num {
+                    width: 60px;
+                    line-height: 34px;
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: 900;
+
+                }
+
+                .btn {
+                    width: 35px;
+                    height: 35px;
+                    line-height: 38px;
+                    font-size: 14px;
+                    text-align: center;
+                    color: #666;
+                    border-radius: 50%;
+                    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+                    border: 1px solid rgba(0, 0, 0, .06);
+
+                    &:hover {
+                        background: rgba(0, 0, 0, .1);
+                        cursor: pointer;
+                    }
+
+                    &.disabled {
+                        cursor: not-allowed;
+
+                        &:hover {
+                            background: #fff;
+                        }
+                    }
+                }
+            }
+
+            .btn-container {
+                display: flex;
+
+                .btn {
+                    height: 40px;
+                    line-height: 40px;
+                    font-weight: 700;
+                    border-radius: 6px;
+                    cursor: pointer;
+                    width: 118px;
+                    height: 40px;
+                    text-align: center;
+
+                    &.toBuy {
+                        border: 1px solid #dedede;
+                        color: #646464;
+                        background-color: #f8f8f8;
+
+                        &:hover {
+                            background: linear-gradient(#ddd, #ebebeb);
+                            ;
+                        }
+                    }
+
+                    &.addCar {
+                        border-radius: 6px;
+                        color: #fff;
+                        margin-left: 50px;
+                        background-color: #6383c6;
+                        background-image: linear-gradient(#6383c6, #4262af);
+                        padding: 1px;
+                    }
+                }
+
+            }
         }
     }
+
+    .productInfo {
+        margin-top: 25px;
+        border-radius: 8px;
+        overflow: hidden;
+        border: 1px solid #dcdcdc;
+        background: #fff;
+
+        .title {
+            padding-left: 20px;
+            line-height: 60px;
+            font-size: 12px;
+            color: #333;
+            background: linear-gradient(#fbfbfb, #ececec);
+            border-bottom: 1px solid #dcdcdc;
+        }
+
+        .body {
+            img {
+                display: block;
+                width: 1198px;
+
+            }
+        }
+    }
+
 }
