--- a/sass/goodsDetails.scss
+++ b/sass/goodsDetails.scss
@@ -50,7 +50,7 @@
                 position: relative;
 
                 .picShow-container {
-                    margin-left: 10px;
+                    margin-right: 10px;
 
                     img {
                         display: block;
@@ -63,8 +63,12 @@
                     .picBig{
                         display: block;
                     }
+                    .glass{
+                        display: block;
+                    }
                 }
                 .picBig {
+                    background: #fff;
                     display: none;
                     width: 440px;
                     height: 440px;
@@ -74,14 +78,24 @@
                     top: 0;
                     overflow: hidden;
                     img{
-                        width: 700px;
-                        height: 700px;
+                        width: 1760px;
+                        height: 1760px;
                         display: block;
-                        position: absolute;
+                        position: absolute; 
                         top: 0;
                         left: 0;
                     }
                 }
+                .glass{
+                    position: absolute;
+                    width: 110px;
+                    height: 110px;
+                    background: rgba(0, 0, 0, .2);
+                    left: 0;
+                    top: 0;
+                    display: none;
+                }
+                
             }
         }
 
