--- a/sass/smartisan.scss
+++ b/sass/smartisan.scss
@@ -41,7 +41,10 @@ header {
                 color: hsla(0, 0%, 100%, .7);
 
                 &.active {
-                    color: #e5e5e5;
+                    a {
+                        color: #e5e5e5;
+                    }
+
                     font-weight: 700;
                 }
 
